--- a/html/forms/tasks/basic-controls/basic-controls2-download.html
+++ b/html/forms/tasks/basic-controls/basic-controls2-download.html
@@ -19,39 +19,40 @@
   </head>
 
   <body>
-    <form>
-      <fieldset>
-        <legend>Who is your favorite pony?</legend>
-        <ul>
-          <li>
-            <label for="pinkie">Pinkie Pie</label>
-
-          </li>
-          <li>
-            <label for="rainbow">Rainbow Dash</label>
-
-          </li>
-          <li>
-            <label for="twilight">Twilight Sparkle</label>
-
-          </li>
-        </ul>
-      </fieldset>
-      <fieldset>
-        <legend>Hotdog preferences</legend>
-        <ul>
-          <li>
-            <label for="vegan">Vegan</label>
-
-          </li>
-          <li>
-            <label for="onions">Onions</label>
-
-          </li>
-        </ul>
-      </fieldset>
-      <button>Submit</button>
-    </form>
+     <form action="https://httpbin.org/post" method="post">
+        <fieldset>
+          <legend>Who is your favorite pony?</legend>
+          <ul>
+            <li>
+              <label for="pinkie">Pinkie Pie</label>
+<input type="radio" name="favorite_pony" id="pinkie" value="pinkie"  checked/>
+            </li>
+            <li>
+              <label for="rainbow">Rainbow Dash</label>
+<input type="radio" name="favorite_pony" id="rainbow" value="rainbow"/>
+            </li>
+            <li>
+              <label for="twilight">Twilight Sparkle</label>
+<input type="radio" name="favorite_pony" id="twilight" value="twilight"/>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Hotdog preferences</legend>
+          <ul>
+            <li>
+              <label for="vegan">Vegan</label>
+<input type="checkbox" name="hotdog_preferences" id="vegan" value="vegan"/>
+            </li>
+            <li>
+              <label for="onions">Onions</label>
+<input type="checkbox" name="hotdog_preferences" id="onions" value="onions" />
+            </li>
+          </ul>
+        </fieldset>
+        <button>Submit</button>
+      </form>
+    
   </body>
 
 </html>
