--- a/html/forms/tasks/other-controls/other-controls3-download.html
+++ b/html/forms/tasks/other-controls/other-controls3-download.html
@@ -23,16 +23,18 @@
       <ul>
         <li>
           <label for="food">Enter your favorite food:</label>
+          <input type="text" name="food" id="food" list="food-data">
 
-
-              Salad
-              Curry
-              Pizza
-              Fajitas
-              Biscuits
-              Crisps
-              Fruit
-              Breadsticks
+              <datalist id="food-data">
+                <option value="Salad"></option>
+                <option value="Curry"></option>
+                <option value="Pizza"></option>
+                <option value="Fajitas"></option>
+                <option value="Biscuits"></option>
+                <option value="Crisps"></option>
+                <option value="Fruit"></option>
+                <option value="Breadsticks"></option>
+              </datalist>
 
         </li>
         <li>
